# Extension-fetcher

./: Cargo.toml  README.md  default.nix  example_extension_data_t-w-i-s.json  extensions.toml  links.url  ref-updater.sh  shell.nix
src/: main.rs
