[package]
name = "extensionfetcher"
version = "0.1.0"
authors = ["bootstrap-prime <bootstrap.prime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "^0.5.8"
serde = { version = "^1.0.125", features = ["derive"] }
reqwest = "0.11.3"
serde_json = "1.0.64"
